# op-share-classifier-mcp

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/op_share_classifier/: __main__.py  classify.py  derive.py  server.py
tests/: test_classify_mocked.py  test_derivation.py  test_live.py  test_no_leak_logging.py  test_server.py
