[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "op-share-classifier"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.12",
    "httpx>=0.27",
    "cryptography>=42",
    "uvicorn>=0.29",
    "starlette>=0.37",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.scripts]
op-share-classifier = "op_share_classifier.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/op_share_classifier"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
